--- a/Pages/StudentPage.razor
+++ b/Pages/StudentPage.razor
@@ -20,7 +20,7 @@
                 <td>@st.firstName</td>
                 <td>@st.enrollmentDate</td>
                 <td> 
-                    <a href="@($"studentdetail/{st.studentID}")" class="btn btn-info"> Details</a>
+                    <a href="@($"detail/{st.studentID}")" class="btn btn-info"> Details</a>
                     <a href="@($"enroll/{st.studentID}")" class="btn btn-primary"> Enroll</a>
                     <a href="@($"edit/{st.studentID}")" class="btn btn-success"> Edit</a>
                     <a href="@($"delete/{st.studentID}")" class="btn btn-danger"> Delete</a>
