--- a/Pages/DetailStudent.razor
+++ b/Pages/DetailStudent.razor
@@ -16,7 +16,7 @@ else{
         </div>
         <br>
         <div class="col-sm-8">
-            <a href="@($"edit/{Student.studentID}")" > Edit</a>
-            <a href="studentspage" > Back to List</a>
+            <a href="@($"edit/{Student.studentID}")" class="btn btn-link" > Edit</a>
+            <a href="/studentspage" class="btn btn-link" > Back to List</a>
         </div>
 }
