--- a/Pages/AddStudents.razor
+++ b/Pages/AddStudents.razor
@@ -9,7 +9,8 @@
             NIM
         </label>
         <div class="col-sm-10">
-            <InputText id="studentID" class="form-control" placeholder="NIM / Student ID" />   
+            <InputText id="studentID" class="form-control" placeholder="NIM / Student ID" 
+            @bind-Value="Students.studentID" />   
         </div>
     </div>
     <div class="form-group row">
@@ -17,7 +18,8 @@
             Nama Depan
         </label>
         <div class="col-sm-10">
-            <InputText id="firstName" class="form-control" placeholder="Nama Depan / First Name" />   
+            <InputText id="firstName" class="form-control" placeholder="Nama Depan / First Name"
+            @bind-Value="Students.firstName" />   
         </div>
     </div>
     <div class="form-group row">
@@ -25,7 +27,8 @@
             Nama Belakang
         </label>
         <div class="col-sm-10">
-            <InputText id="lastName" class="form-control" placeholder="Nama Belakang / Last Name" />   
+            <InputText id="lastName" class="form-control" placeholder="Nama Belakang / Last Name" 
+            @bind-Value="Students.lastName"/>   
         </div>
     </div>
     <div class="form-group row">
