--- a/Pages/EditStudent.razor
+++ b/Pages/EditStudent.razor
@@ -9,7 +9,8 @@
             NIM
         </label>
         <div class="col-sm-10">
-            <InputText id="studentID" required disabled class="form-control" placeholder="NIM / Student ID" />   
+            <InputText id="studentID" required disabled class="form-control" placeholder="NIM / Student ID"
+            @bind-Value="student.studentID" />   
         </div>
     </div>
     <div class="form-group row">
