--- a/Pages/AddStudents.razor
+++ b/Pages/AddStudents.razor
@@ -10,7 +10,7 @@
         </label>
         <div class="col-sm-10">
             <InputText id="studentID" class="form-control" placeholder="NIM / Student ID" 
-            @bind-Value="Students.studentID" />   
+            @bind-Value="Students.studentID"/>   
         </div>
     </div>
     <div class="form-group row">
@@ -36,7 +36,7 @@
             Tanggal masuk
         </label>
         <div class="col-sm-10">
-            <InputDate @bind-Value="Students.enrollmentDate" class="form-control"> </InputDate>  
+            <InputDate @bind-Value="Students.enrollmentDate" class="form-control" /> 
         </div>
     </div>
     <button class="btn btn-primary" type="submit">Create</button>
